tests/golden/defaults/stackgres-operator/stackgres-operator/00_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    openshift.io/node-selector: node-role.kubernetes.io/infra=
  labels:
    foo: bar
    name: syn-stackgres-operator
  name: syn-stackgres-operator
