tests/golden/defaults/stackgres-operator/stackgres-operator/01_network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  annotations: {}
  labels:
    name: allow-stackgres-api
  name: allow-stackgres-api
  namespace: syn-stackgres-operator
spec:
  egress: []
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              appuio.io/billing-name: appcat-postgresql
  podSelector:
    matchLabels:
      app: stackgres-restapi
  policyTypes:
    - Ingress
